--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,10 +4,6 @@ body {
 	font-weight: 300;
 }
 
-a {
-  	color: #00B7FF;
-}
-
 .tweet {
 	border: 1px solid #ccc;
 	padding: 5px;
@@ -15,7 +11,7 @@ a {
 	margin: 5px;
 }
 
-#tweet_container {
+/*#tweet_container {
 	position: absolute;
 	top: 50px;
 	left: 50px;
@@ -25,11 +21,16 @@ a {
 
 #title {
 	padding-left: 5px;
-}
+}*/
 
-#new_tweet {
+/*#new_tweet {
 	position: absolute;
 	right: 50px;
 	top: 50px;
-	margin: 100px;
 }
+
+#user_info {
+	position: absolute;
+	right: 50px;
+	top: 100px;
+}*/
