--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -12,7 +12,7 @@
       <form name="input" action="login" method="post">
         <b>Login</b> <br>
         Fritter Username: <input type="text" name="username" placeholder="fritter username"><br>
-        Password: <input type="text" name="password" placeholder="password"><br>
+        Password: <input type="password" name="password" placeholder="password"><br>
         <input type="submit" value="Send">
       </form>
     </div>
