--- a/views/users/new_user.ejs
+++ b/views/users/new_user.ejs
@@ -14,7 +14,7 @@
         First Name: <input type="text" name="first" placeholder="first name"><br>
         Last Name: <input type="text" name="last" placeholder="last name"><br>
         Fritter Username: <input type="text" name="username" placeholder="fritter username"><br>
-        Password: <input type="text" name="password" placeholder="password"><br>
+        Password: <input type="password" name="password" placeholder="password"><br>
         <input type="submit" value="Create">
       </form>
     </div>
