--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+    <% include partials/header %>
   </head>
+
   <body>
 
-    <div class="col-sm-4">
+    <div class="col-sm-4 text-center">
+
       <% if(username) { %>
 
-        <h1>Welcome <%=first%>!</h1>
+        <h2>Hi <%=first%>!</h1>
         <div>
           <form name="input" action="logout" method="post">
             <input type="submit" value="Logout">
@@ -19,44 +18,55 @@
         </div>
         <hr>
         <div>
-          <form name="input" action="tweet" method="post">
+          <form id="new_tweet" name="input" action="tweet" method="post">
             <b>Write a tweet</b> <br>
-            <textarea rows="4" style="width:100%" type="text" name="tweet"></textarea>
+            <textarea rows="6" type="text" name="tweet"></textarea>
             <input type="submit" value="Submit">
           </form>
         </div>
 
       <% } else { %>
-
-          <div><a href="/users/new_user">New User</a></div>
-          <div><a href="/users/login"> Login </a></div>
+        <div id="login_buttons">
+          <form method="get" action="/users/login">
+            <button type="submit">Login</button>
+          </form>
+          <form method="get" action="/users/new_user">
+            <button type="submit">New User</button>
+          </form>
+        </div>
 
       <% } %>
+
     </div>
 
     <div class="col-sm-8">
       <div id="tweet_container">
-        <h1 id="title"><%= title %></h1>
-
+        <h1 id="title" class="text-center"><%= title %>   <img src="images/fritter.png" height="39" width="55"></h1>
+        <hr>
         <% for(var i=tweets.length-1; i>=0; i--){ %>
-          <div class="tweet">
-        <%= tweets[i].author_first %> <%= tweets[i].author_last %> @<%= tweets[i].author_username %>: <%= tweets[i].tweet %>
-            
-            <% if (tweets[i].author == user_id) { %>
-              <form name="input" action="edit" method="post">
-                <input type="submit" value="Edit">
+          <% if (tweets[i].author == user_id) { %>
+            <div class="tweet active">
+              <b><%= tweets[i].author_first %> <%= tweets[i].author_last %></b>
+              <i>@<%= tweets[i].author_username %></i>: <br>
+              <%= tweets[i].tweet %>
+              <form name="input" action="edit" method="post" id="edit">
+                <button type="submit"><span class="glyphicon glyphicon-pencil"></span></button>
                 <input type="hidden" name="tweet_id" value=<%= tweets[i]._id%>>
               </form>
-              <form name="input" action="delete" method="post">
-                <input type="submit" value="Delete">
+              <form name="input" action="delete" method="post" id="delete">
+                <button type="submit"><span class="glyphicon glyphicon-trash"></span></button>
                 <input type="hidden" name="tweet_id" value=<%= tweets[i]._id%>>
               </form>
-            <% } %>
-
-          </div>
+            </div>
+          <% } else { %>
+            <div class="tweet">
+              <b><%= tweets[i].author_first %> <%= tweets[i].author_last %></b>
+              <i>@<%= tweets[i].author_username %></i>: <br>
+              <%= tweets[i].tweet %>
+            </div>
+          <% } %>
         <%}%>
-
-      </div>
+      </div>      
     </div>
 
   </body>
