--- a/views/secondary/login.ejs
+++ b/views/secondary/login.ejs
@@ -3,14 +3,14 @@
 <html>
   
   <head>
-    <% include partials/header %>
+    <% include ../partials/header %>
   </head>
 
   <body>
 
-    <div id="user_info" style="background-color: white">
+    <div id="user_info" style="background-color: white" class="text-center">
       <form name="input" action="login" method="post">
-        <b>Login</b> <br>
+        <h2>Login</h2>
         Fritter Username: <input type="text" name="username" placeholder="fritter username"><br>
         Password: <input type="password" name="password" placeholder="password"><br>
         <input type="submit" value="Send">
