--- a/views/secondary/signup.ejs
+++ b/views/secondary/signup.ejs
@@ -2,14 +2,14 @@
 <html>
   
   <head>
-    <% include partials/header %>
+    <% include ../partials/header %>
   </head>
 
   <body>
 
-    <div id="user_info" style="background-color: white">
+    <div id="user_info" style="background-color: white" class="text-center">
       <form name="input" action="signup" method="post">
-        <b>Create New User</b><br>
+        <h2>Create New User</h2>
         First Name: <input type="text" name="first" placeholder="first name"><br>
         Last Name: <input type="text" name="last" placeholder="last name"><br>
         Fritter Username: <input type="text" name="username" placeholder="fritter username"><br>
