--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,6 +12,14 @@ hr {
 	margin-bottom: 10px !important;
 }
 
+#edit_tweet, #user_info {
+	background-color: white;
+	border-radius: 10px;
+	margin-right: 30%;
+	margin-left: 30%;
+	padding: 5px 10px 20px 10px;
+}
+
 #submit {
 	margin-bottom: 10px;
 }
