--- a/views/secondary/edit_tweet.ejs
+++ b/views/secondary/edit_tweet.ejs
@@ -2,18 +2,18 @@
 <html>
   
   <head>
-    <% include partials/header %>
+    <% include ../partials/header %>
   </head>
 
   <body>
 
     <div>
 
-      <div>
+      <div id="edit_tweet" class="text-center">
         <form name="input" action="edited_tweet" method="post">
-          <b>Edit tweet</b> <br>
+          <h2>Edit tweet</h2>
           <textarea rows="6" type="text" name="tweet"><%= tweet %></textarea>
-          <input type="submit" value="Save">
+          <button type="submit" class="btn btn-default">Save</button>
         </form>
       </div>
 
