--- a/views/secondary/login.ejs
+++ b/views/secondary/login.ejs
@@ -13,7 +13,7 @@
         <h2>Login</h2>
         Fritter Username: <input type="text" name="username" placeholder="fritter username"><br>
         Password: <input type="password" name="password" placeholder="password"><br>
-        <input type="submit" value="Send">
+        <button type="submit" class="btn btn-default">Send</button>
       </form>
     </div>
     
