--- a/views/secondary/signup.ejs
+++ b/views/secondary/signup.ejs
@@ -14,7 +14,7 @@
         Last Name: <input type="text" name="last" placeholder="last name"><br>
         Fritter Username: <input type="text" name="username" placeholder="fritter username"><br>
         Password: <input type="password" name="password" placeholder="password"><br>
-        <input type="submit" value="Create">
+        <button type="submit" class="btn btn-default">Create</button>
       </form>
     </div>
     
