--- a/views/does_not_exist.ejs
+++ b/views/does_not_exist.ejs
@@ -6,7 +6,7 @@
 
   <body>
 
-    <h1 style="background-color: white">Sorry! That page does not exist</h1>
+    <h1 class="text-center" style="background-color: white; border-radius: 10px; margin-left:30%; margin-right:30%">Sorry! That page does not exist</h1>
 
   </body>
 </html>
